# KLaunchpad

./: .gitignore  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
examples/KLaunchpadExamples/: build.gradle.kts  settings.gradle.kts
examples/KLaunchpadExamples/src/main/kotlin/: EnterBootloader.kt  FlashPressedPad.kt  LightAllWhenPressed.kt
examples/Kotlin/: build.gradle.kts
examples/Kotlin/src/main/kotlin/: Faders.kt
examples/c++/: .gitignore  CMakeLists.txt  KLaunchpad.h  main.cpp
examples/go/: .gitignore  main.go
examples/js/purejs-examples/: KLaunchpad.js  index.html  index.js
examples/js/react-examples/: README.md  package-lock.json  package.json
examples/js/react-examples/public/: index.html  manifest.json
examples/js/react-examples/src/: App.css  App.js  index.css
src/commonTest/kotlin/: HexEncodingTest.kt  LaunchpadColourUtilsTest.kt  PadTests.kt  TestUtils.kt
src/jsMain/kotlin/: JsApi.kt  JsApiImpl.kt  JsStdlibExtensions.kt
src/jsMain/kotlin/jsExternal/: JsCollections.kt  WebMidi.kt
src/jsMain/resources/: KLaunchpad.d.ts  package.json
src/nativeApiMain/kotlin/nativeApi/: Destructors.kt  Global.kt  Launchpad.kt  MidiDevice.kt  Pad.kt
src/nativeApiMain/resources/: KLaunchpad.h  NativeTypes.def
src/nativeWindowsMain/kotlin/api/: MidiDeviceImpl.kt  Utils.kt  WindowsMidiApi.kt
src/windowsLibraryMain/kotlin/nativeApi/: Destructors.kt  NativeApi.kt  Pad.kt  Utils.kt
src/windowsLibraryMain/resources/: KLaunchpad.h
src/windowsMain/kotlin/: LaunchpadDemoNative.kt
(+113 files in other folders)
